# DeepSeek-TUI

./: CHANGELOG.md  Cargo.toml  END_OF_NIGHT_REPORT.md  README.md  README.zh-CN.md  config.example.toml
.github/workflows/: parity.yml  release.yml
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/app-server/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/execpolicy/: Cargo.toml
crates/hooks/: Cargo.toml
crates/mcp/: Cargo.toml
crates/protocol/tests/: parity_protocol.rs
crates/secrets/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: client.rs  compaction.rs  config.rs  main.rs  models.rs  palette.rs  prompts.rs  runtime_threads.rs  seam_manager.rs  settings.rs  utils.rs  working_set.rs
crates/tui/src/commands/: core.rs
crates/tui/src/core/: engine.rs
crates/tui/src/core/engine/: tests.rs  tool_catalog.rs  tool_setup.rs  turn_loop.rs
crates/tui/src/lsp/: client.rs
crates/tui/src/prompts/: base.md
crates/tui/src/repl/: mod.rs  runtime.rs  sandbox.rs
crates/tui/src/skills/: mod.rs
crates/tui/src/tools/: shell.rs
crates/tui/src/tools/subagent/: mod.rs
crates/tui/src/tui/: app.rs  file_mention.rs  history.rs  mod.rs  model_picker.rs  pager.rs  provider_picker.rs  ui.rs
crates/tui/src/tui/views/: mod.rs
crates/tui/src/tui/widgets/: footer.rs  header.rs  mod.rs  tool_card.rs
docs/: parity_release_and_ci.md  workspace_migration_status.md
npm/deepseek-tui/: package.json
src/: error_taxonomy.rs  features.rs  models.rs  pricing.rs  utils.rs
src/tools/: finance.rs  weather.rs
