[package]
name = "deepseek-app-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Codex-style app-server transport for DeepSeek workspace architecture"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
deepseek-agent = { path = "../agent" }
deepseek-config = { path = "../config" }
deepseek-core = { path = "../core" }
deepseek-execpolicy = { path = "../execpolicy" }
deepseek-hooks = { path = "../hooks" }
deepseek-mcp = { path = "../mcp" }
deepseek-protocol = { path = "../protocol" }
deepseek-state = { path = "../state" }
deepseek-tools = { path = "../tools" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
