[package]
name = "deepseek-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core runtime boundaries for DeepSeek workspace architecture"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
deepseek-agent = { path = "../agent" }
deepseek-config = { path = "../config" }
deepseek-execpolicy = { path = "../execpolicy" }
deepseek-hooks = { path = "../hooks" }
deepseek-mcp = { path = "../mcp" }
deepseek-protocol = { path = "../protocol" }
deepseek-state = { path = "../state" }
deepseek-tools = { path = "../tools" }
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
